# precise_schedule

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml  README.md  deno.json
backend/application/http/: HTTPRequest.ts  HTTPResponse.ts  Headers.ts  IdParam.ts
backend/application_mock/http/: HTTPRequestMock.ts  httpRequestMock.ts
backend/domain/lang/: result.ts
backend/domain/session/: InvalidSessionError.ts  Session.ts  model._stub.ts
backend/domain/userSession/: service._stub.test.ts  service._stub.ts  service.impl.test.ts  service.impl.ts  service.ts
backend/domain/validation/: Schema.ts  V.ts  Validation.ts  ValidationResult.ts  Validator.ts  model.ts  service._stub.ts  service.ts
backend/domain_impl/userSession/: ValidateUserSessionServiceImpl.ts
backend/domain_mock/generation/: IdGeneratorMock.test.ts  IdGeneratorMock.ts
backend/domain_mock/session/: SessionMock.ts
backend/domain_mock/userSession/: ValidateUserSessionServiceMock.ts
backend/domain_mock/validation/: ValidatorMock.test.ts  ValidatorMock.ts
backend/infra/generate/: IdGeneratorRandom.test.ts  IdGeneratorRandom.ts
backend/infra/http/: bodyEndpoint.ts  fullEndpoint.ts  makeBody.ts  makeParams.ts  makeResult.ts  makeUserId.ts  paramsEndpoint.ts
backend/infra/session/: SessionJWTAdapter.test.ts  SessionMiddlewareOakAdapter.ts  jwt.adapter.test.ts  key.ts
backend/infra/validation/: ValidatorImpl.test.ts  ValidatorImpl.ts  ValidatorSuccess.test.ts  ValidatorSuccess.ts  executeValidation.ts  service.impl.test.ts  service.impl.ts
backend/locales/: en.json  es.json  pt.json
backend/main/: main.ts
backend/src/: lib.rs  main.rs  server.rs
backend/src/common/: error.rs  language.rs  mod.rs  session.rs
backend/src/domain/: database.rs  generator.rs  language.rs  mod.rs  session.rs  validation.rs
backend/src/entry/: deps.rs  event_controller.rs  health_controller.rs  mod.rs  user_controller.rs
backend/src/infra/: generator.rs  mod.rs  session.rs  validation.rs
backend/src/migration/: m20250516_000001_create_post_table.rs  m20250516_000001_create_user_table.rs  m20250517_000001_create_user_constraint_primary_key.rs  m20250518_01_create_app_user_table.rs  m20250518_02_create_app_user_primary_key.rs  m20250518_03_create_app_user_created_at_column.rs  m20250518_04_create_app_user_created_at_not_null.rs  m20250518_04_create_app_user_updated_at_column.rs  m20250518_05_create_app_user_updated_at_column.rs  m20250518_05_create_app_user_username_column.rs  m20250518_06_create_app_user_updated_at_not_null.rs  m20250518_06_create_app_user_username_unique.rs  m20250518_07_create_app_user_password_column.rs  m20250518_07_create_app_user_username_column.rs  m20250518_08_create_app_user_email_column.rs  m20250518_08_create_app_user_email_unique.rs  m20250518_08_create_app_user_username_not_null.rs  (+19 more)
backend/tests/: integration.rs
domain/: Cargo.toml  README.md
domain/src/: database.rs  generator.rs  language.rs  lib.rs  session.rs  validation.rs
(+2401 files in other folders)
