[package]
name = "backend"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "412a260b182232be3d373f42cb079bff84e5e199" }
araucaria_plugins = { git = "https://github.com/joao-arthur/araucaria_plugins", rev = "f07f6e1dbebc987d12fca2b94bcd40353acaf45a" }
domain = { path = "../domain" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.140"
uuid = { version = "1.11.0", features = [ "v4"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.0"
email_address = "0.2.9"
regex = "1.11.1"
accept-language = "3.1.0"
rust-i18n = "3.1.2"
 