[package]
name = "backend"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "e32a8774832a90e8014469dd26c986c0f883c7d2" }
araucaria_plugins = { git = "https://github.com/joao-arthur/araucaria_plugins", rev = "0a4e4dcbb234c6859586be890beab8355246d039" }
domain = { path = "../domain" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.140"
uuid = { version = "1.11.0", features = [ "v4"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.0"
email_address = "0.2.9"
regex = "1.11.1"
accept-language = "3.1.0"
rust-i18n = "3.1.2"
serde = "1.0.219"
