[package]
name = "backend"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "e32a8774832a90e8014469dd26c986c0f883c7d2" }
araucaria_plugins = { git = "https://github.com/joao-arthur/araucaria_plugins", rev = "0a4e4dcbb234c6859586be890beab8355246d039" }
domain = { path = "../domain" }
accept-language = "3.1.0"
axum = "0.8.4"
chrono = "0.4.40"
email_address = "0.2.9"
iso8601 = "0.6.3"
jsonwebtoken = "9.3.0"
rust-i18n = "3.1.2"
sea-orm = { version = "1.1.11", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros",   "debug-print" ] }
sea-orm-migration = { version = "1.1.11", features = [ "sqlx-postgres", "runtime-tokio-native-tls" ] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["limit", "trace"] }
uuid = { version = "1.11.0", features = [ "v4"] }

[dev-dependencies]
regex = "1.11.1"
reqwest =  { version = "0.12.15", features = ["json","gzip"] }
